--- a/src/components/form/Form.scss
+++ b/src/components/form/Form.scss
@@ -4,53 +4,60 @@
     display: flex;
     flex-direction: column;
     margin-top: 60px;
+    width: 100%;
 
-    .label-input{
+    .col-input{
         display: flex;
-        align-items: center;
-        font-size: $font2;
-        color: $color2;
-        margin-bottom: 7px;
+        flex-direction: column;
+        width: 100%;
 
-        .red-stars{
-            color: #ff0000;
-            font-weight: bold;
-            margin-left: 5px;
+        .label-input{
+            display: flex;
+            align-items: center;
+            font-size: $font2;
+            color: $color2;
+            margin-bottom: 7px;
+    
+            .red-stars{
+                color: #ff0000;
+                font-weight: bold;
+                margin-left: 5px;
+            }
         }
-    }
-
-    .input-card{
-        border: 1px solid #ddd;
-        border-radius: 3px;
-        font-size: $font2;
-        color: $color2;
-        outline: none;
-        padding: 8px 13px;
-        width: 100%;
-    }
-
-    .input-card::placeholder{
-        color: #999;
-    }
-
-    .input-area{
-        border: 1px solid #ddd;
-        border-radius: 3px;
-        font-size: $font2;
-        color: $color2;
-        outline: none;
-        padding: 8px 13px;
-        width: 100%;
-        resize: vertical;
-    }
-
-    .input-area::placeholder{
-        color: #999;
-    }
-
-    .error-message{
-        font-size: 11px;
-        color: #ff0000;
-        margin-bottom: 10px;
+    
+        .input-card{
+            border: 1px solid #ddd;
+            border-radius: 3px;
+            font-size: $font2;
+            color: $color2;
+            outline: none;
+            padding: 8px 13px;
+            width: auto;
+        }
+    
+        .input-card::placeholder{
+            color: #999;
+        }
+    
+        .input-area{
+            border: 1px solid #ddd;
+            border-radius: 3px;
+            font-size: $font2;
+            color: $color2;
+            outline: none;
+            padding: 8px 13px;
+            width: auto;
+            resize: vertical;
+        }
+    
+        .input-area::placeholder{
+            color: #999;
+        }
+    
+        .error-message{
+            font-size: 11px;
+            color: #ff0000;
+            margin-bottom: 10px;
+        }
     }
 }
