--- a/src/components/template/Template.scss
+++ b/src/components/template/Template.scss
@@ -32,10 +32,31 @@
     }
 }
 
+// untuk image mobile di samakan dengan nav mobile
+@mixin mobileImage {
+    @media (max-width: 401px) {
+        @content;
+    }
+}
+
+@mixin tabletToDesktopImage(){
+    @media (min-width: 401px) and (max-width: 1114px) {
+        @content;
+    }
+}
+
 .wrapp-template {
     display: flex;
     flex-direction: column;
     padding-top: 157px;
+
+    @include mobileImage(){
+        padding-top: 75px;
+    }
+
+    @include tabletToDesktopImage(){
+        padding-top: 92px;
+    }
 
     // banner page
     .container-banner-page {
@@ -48,6 +69,14 @@
             width: 100%;
             object-fit: cover;
             object-position: center;
+
+            @include mobile(){
+                height: 40vh;
+            }
+
+            @include tabletHeaderAndContent(){
+                height: 60vh;
+            }
         }
 
         .shadow-banner {
@@ -56,6 +85,14 @@
             width: 100%;
             background-color: #000;
             opacity: 0.5;
+
+            @include mobile(){
+                height: 40vh;
+            }
+
+            @include tabletHeaderAndContent(){
+                height: 60vh;
+            }
         }
     }
 
@@ -71,6 +108,14 @@
             flex-direction: column;
             background-color: transparent;
             margin-top: -200px;
+
+            @include mobile(){
+                margin-top: -50px;
+            }
+
+            @include tabletHeaderAndContent(){
+                margin-top: -100px;
+            }
 
             // header green
             .header-green {
@@ -190,7 +235,7 @@
                     letter-spacing: 0.1px;
 
                     @include mobile() {
-                        padding: 5%;
+                        padding: 5% 5% 8% 5%;
                         border-top-left-radius: 0px;
                         border-top-right-radius: 0px;
                     }
